<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginscr"
    tools:context=".view.LupaPassActivity">

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:text="@string/forgot_password1"
        android:textColor="@color/light_font"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmailForgot"
            android:layout_width="327dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:background="@drawable/ediround"
            android:hint="@string/your_registered_email"
            android:inputType="textEmailAddress" />



        <Button
            android:id="@+id/btn_SubmitForgot"
            android:layout_width="327dp"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:text="@string/submit1"
            android:background="@drawable/editbtnlogin"
            android:textColor="@color/light_font"
            />

        <TextView
            android:id="@+id/txtdoesnthaveaccountforgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:text="@string/doesn_t_have_an_account"
            android:textColor="@color/light_font"
            />

        <Button
            android:id="@+id/btn_registerforgot"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editbtnregister"
            android:textColor="@color/light_font"
            android:text="@string/register"
            />



    </LinearLayout>



</RelativeLayout>