<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscr"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/light_font"
        android:textSize="22dp"
        android:textStyle="bold" />


    <EditText

        android:id="@+id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/ediround"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        />


    <EditText
        android:id="@+id/edtPassword"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ediround"
        android:layout_below="@+id/edtEmail"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/password"/>

    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"
        android:textColor="@color/light_font"
        android:textSize="12dp"
        android:layout_marginRight="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="10dp"
        android:text="Forgot Password ?"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnForgotPassword"
        android:layout_marginTop="40dp"
        android:text="@string/login2"
        android:background="@drawable/editbtnlogin"
        android:textColor="@color/light_font"
        />

    <TextView
        android:id="@+id/txtdoesnthaveaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/doesn_t_have_an_account"
        android:textColor="@color/light_font"
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/txtdoesnthaveaccount"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/editbtnregister"
        android:textColor="@color/light_font"
        android:text="@string/btnregister"
        />

</RelativeLayout>